# xrec

./: CMakeLists.txt  README_phil.md
src/xrec/gd2/: CMakeLists.txt  gd_png.c
src/xrec/gd_wgl/: CMakeLists.txt  gd_pwrit.c
src/xrec/gdb/: rgis.h
src/xrec/include/: gdb.h
src/xrec/main/: CMakeLists.txt
src/xrec/metacode/: CMakeLists.txt
src/xrec/rec/: CMakeLists.txt
src/xrec/rec/main/: geometrie.c  p_edition.c  v_anim.c  xstream.c
src/xrec/rec_util/: CMakeLists.txt
src/xrec/rec_util/gmp/: c_gmpinit.c  gmp_convert.c  gmp_trim.c
src/xrec/rec_util/select/: xrecsel.c
src/xrec/rec_util/xplot88/: xplot88.c
src/xrec/wgl/: CMakeLists.txt  wglplx.c
src/xrec/x_wgl/: CMakeLists.txt  x_wgldefncw.c  x_wglinstcmap.c  x_wglmapc.c  x_wglmapcs.c  x_wglsavpfc.c
